--- a/public/css/less/include/footer.less
+++ b/public/css/less/include/footer.less
@@ -36,7 +36,7 @@ footer.footer {
             font-family: @Ubuntu;
             line-height: 24px;
             a {
-              .link(@dark-green, transparent, #cccccc, transparent);
+              .link(@dark-green, @dark-border, #cccccc, #cccccc);
             }
           }
         }
@@ -48,7 +48,7 @@ footer.footer {
             font-family: @Ubuntu;
             line-height: 24px;
             a {
-              .link(@dark-green, transparent, #cccccc, transparent);
+              .link(@dark-green, @dark-border, #cccccc, #cccccc);
             }
           }
           &:last-child {
@@ -66,7 +66,7 @@ footer.footer {
               }
               font-size: 43px;
               a {
-                .link(@dark-green, @dark-green, #cccccc, #cccccc);
+                .link(@dark-green, @dark-border, #cccccc, #cccccc);
               }
             }
 
