--- a/public/css/less/include/pages/how-to-connect.less
+++ b/public/css/less/include/pages/how-to-connect.less
@@ -113,6 +113,7 @@
     }
   }
   .free-3-days {
+    margin: 120px 0 120px;
     padding-top: 40px;
     background: url(../img/steps_free_connect.png) no-repeat center 20px;
     padding-bottom: 60px;
