--- a/public/css/less/include/variable.less
+++ b/public/css/less/include/variable.less
@@ -11,8 +11,13 @@
   font-style: normal;
 }
 @link-color : #39a651;
-@dark-green : #379d47;
 @link-border: #c3e4ca;
+
+@dark-green : #379d47;
+@dark-border : #406641;
+
+@hover-color: #006939;
+@hover-border: #006939;
 
 @Ubuntu : Ubuntu;
 @UbuntuBold: UbuntuBold;
