--- a/public/css/less/include/pages/about.less
+++ b/public/css/less/include/pages/about.less
@@ -32,7 +32,7 @@
       .big-link{
         font-size: 24px;
         font-family: @UbuntuBold;
-        .link(@link-color, transparent, #cccccc, #cccccc)
+        .link(@link-color, @link-border, @hover-color, @hover-border);
       }
     }
     .right-block-wrap{
@@ -68,7 +68,7 @@
           line-height: 24px;
           max-width: 240px;
           .link{
-            .link(@link-color, transparent, #cccccc, #cccccc)
+            .link(@link-color, @link-border, @hover-color, @hover-border);
           }
         }
       }
