--- a/public/css/less/include/pages/tarfis.less
+++ b/public/css/less/include/pages/tarfis.less
@@ -325,6 +325,7 @@ p.button-row {
 }
 
 .free-connect {
+
   .connect-title {
     font-size: 36px;
     text-align: center;
@@ -361,6 +362,7 @@ p.button-row {
   }
 }
 .free-3-days {
+  margin: 60px 0 100px;
   padding-top: 40px;
   background: url(../img/steps_free_connect.png) no-repeat center 20px;
   padding-bottom: 60px;
