--- a/public/css/style.css
+++ b/public/css/style.css
@@ -880,6 +880,7 @@ li.comment-item span.comment-speed i.small {
   color: #666666;
 }
 .how-to-connect .free-3-days {
+  margin: 120px 0 120px;
   padding-top: 40px;
   background: url(../img/steps_free_connect.png) no-repeat center 20px;
   padding-bottom: 60px;
@@ -1370,6 +1371,7 @@ p.button-row button.connect:hover {
   outline: none;
 }
 .free-3-days {
+  margin: 60px 0 100px;
   padding-top: 40px;
   background: url(../img/steps_free_connect.png) no-repeat center 20px;
   padding-bottom: 60px;
@@ -1466,7 +1468,7 @@ p.button-row button.connect:hover {
 .about-company .column-wrap .base-content-wrap .big-link {
   font-size: 24px;
   font-family: UbuntuBold;
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #c3e4ca, #c3e4ca 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1475,20 +1477,20 @@ p.button-row button.connect:hover {
 }
 .about-company .column-wrap .base-content-wrap .big-link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 .about-company .column-wrap .base-content-wrap .big-link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 .about-company .column-wrap .right-block-wrap {
   margin-left: 60px;
@@ -1518,7 +1520,7 @@ p.button-row button.connect:hover {
   max-width: 240px;
 }
 .about-company .column-wrap .right-block-wrap .consult-block .text-block .link {
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #c3e4ca, #c3e4ca 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1527,20 +1529,20 @@ p.button-row button.connect:hover {
 }
 .about-company .column-wrap .right-block-wrap .consult-block .text-block .link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 .about-company .column-wrap .right-block-wrap .consult-block .text-block .link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 footer.footer {
   background: #333333;
@@ -1590,7 +1592,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text {
   line-height: 24px;
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text a {
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #406641, #406641 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1599,7 +1601,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text a {
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text a:hover {
   cursor: pointer;
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1607,7 +1609,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text a:hov
   color: #cccccc;
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:last-child .col-1-2 p.row-text a:focus {
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1620,7 +1622,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text {
   line-height: 24px;
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text a {
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #406641, #406641 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1629,7 +1631,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text a {
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text a:hover {
   cursor: pointer;
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1637,7 +1639,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text a:ho
   color: #cccccc;
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3 p.row-text a:focus {
-  background: linear-gradient(to left, transparent, transparent 100%);
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1659,7 +1661,7 @@ footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3:last-child p.ro
   left: -30px;
 }
 footer.footer .wrap-1200.foot-flex .row-1-2:first-child .col-1-3:last-child p.row-text a {
-  background: linear-gradient(to left, #379d47, #379d47 100%);
+  background: linear-gradient(to left, #406641, #406641 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
@@ -1754,20 +1756,20 @@ header.page-head.index-page .info-row .inf-block .consult label .link {
 }
 header.page-head.index-page .info-row .inf-block .consult label .link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page .info-row .inf-block .consult label .link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page .info-row .connect-item {
   display: inline-block;
@@ -1799,20 +1801,20 @@ header.page-head.index-page .info-row .connect-item .connect .link {
 }
 header.page-head.index-page .info-row .connect-item .connect .link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page .info-row .connect-item .connect .link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page nav.main-menu {
   display: -ms-flexbox;
@@ -1836,6 +1838,10 @@ header.page-head.index-page nav.main-menu ul.menu li.menu-item.active .menu-link
   background: none;
   color: #333333;
 }
+header.page-head.index-page nav.main-menu ul.menu li.menu-item.active .menu-link:hover {
+  background: none;
+  color: #333333;
+}
 header.page-head.index-page nav.main-menu ul.menu li.menu-item .menu-link {
   font-family: UbuntuBold;
   text-transform: uppercase;
@@ -1849,20 +1855,20 @@ header.page-head.index-page nav.main-menu ul.menu li.menu-item .menu-link {
 }
 header.page-head.index-page nav.main-menu ul.menu li.menu-item .menu-link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page nav.main-menu ul.menu li.menu-item .menu-link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head.index-page .mobile-menu {
   display: none;
@@ -1928,20 +1934,20 @@ header.page-head .info-row .inf-block .consult label .link {
 }
 header.page-head .info-row .inf-block .consult label .link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head .info-row .inf-block .consult label .link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head .info-row .connect-item {
   display: inline-block;
@@ -1972,20 +1978,20 @@ header.page-head .info-row .connect-item .connect .link {
 }
 header.page-head .info-row .connect-item .connect .link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head .info-row .connect-item .connect .link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head nav.main-menu {
   display: -ms-flexbox;
@@ -2008,6 +2014,10 @@ header.page-head nav.main-menu ul.menu li.menu-item.active .menu-link {
   background: none;
   color: #333333;
 }
+header.page-head nav.main-menu ul.menu li.menu-item.active .menu-link:hover {
+  background: none;
+  color: #333333;
+}
 header.page-head nav.main-menu ul.menu li.menu-item .menu-link {
   font-family: UbuntuBold;
   text-transform: uppercase;
@@ -2021,20 +2031,20 @@ header.page-head nav.main-menu ul.menu li.menu-item .menu-link {
 }
 header.page-head nav.main-menu ul.menu li.menu-item .menu-link:hover {
   cursor: pointer;
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head nav.main-menu ul.menu li.menu-item .menu-link:focus {
-  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  background: linear-gradient(to left, #006939, #006939 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
-  color: #cccccc;
+  color: #006939;
 }
 header.page-head .mobile-menu {
   display: none;
