--- a/public/css/less/mobile/1024.less
+++ b/public/css/less/mobile/1024.less
@@ -18,10 +18,11 @@
       border-radius: 0 0 20px 20px;
     }
   }
+
   header.page-head {
     margin-left: 0;
     width: 100%;
-
+    padding-bottom: 30px;
     .info-row {
       padding: 30px 20px 60px;
       .connect-item {
@@ -52,6 +53,7 @@
       }
     }
   }
+
   header.page-head {
     background: #ffffff;
     .info-row {
@@ -120,6 +122,7 @@
           padding: 40px 0;
           background: #39a651;
           display: none;
+          z-index: 2;
           li.popup-menu-item {
             width: 100%;
             a.menu-link {
@@ -135,6 +138,7 @@
       }
     }
   }
+
   header.page-head {
     display: flex;
     justify-content: space-between;
@@ -188,6 +192,7 @@
           padding: 40px 0;
           background: #39a651;
           display: none;
+          z-index: 2;
           li.popup-menu-item {
             width: 100%;
             a.menu-link {
@@ -213,17 +218,20 @@
   .col-1-2--last {
     padding-top: 30px;
   }
+
   header.page-head.index-page {
     nav.main-menu {
       width: calc(~"100% + 29px");
     }
   }
+
   header.page-head {
     background: #ffffff;
     nav.main-menu {
       width: calc(~"100% + 29px");
     }
   }
+
   .unlimite-int {
     .list {
       display: flex;
@@ -306,31 +314,481 @@
 @media screen and (max-width: 860px) {
   footer.footer {
     .wrap-1200.foot-flex {
+      background: none;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      .col-1-4 {
-        width: 50%;
-        text-align: center;
-        padding-bottom: 15px;
+      .row-1-2 {
+        &:first-child {
+          flex-wrap: wrap;
+          .col-1-3 {
+            margin-bottom: 30px;
+          }
+        }
+        &:last-child {
+          justify-content: center;
+        }
       }
     }
   }
 
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   footer.footer {
     .wrap-1200.foot-flex {
+      background: none;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: space-between;
       flex-wrap: wrap;
-      .col-1-4 {
-        width: 100%;
-        text-align: center;
-        padding-bottom: 25px;
+      .row-1-2 {
+        &:first-child {
+          flex-wrap: wrap;
+          flex-direction: column;
+          align-items: center;
+          .col-1-3 {
+            p.row-text{
+              text-align: center;
+            }
+            &:last-child {
+              p.row-text {
+                &:before {
+                  display: none;
+                }
+                font-size: 36px;
+
+              }
+            }
+            margin-bottom: 30px;
+          }
+        }
+        &:last-child {
+          justify-content: center;
+          flex-direction: column;
+          .col-1-2 {
+            &.mail-icon {
+              &:first-child {
+                &:after {
+                  display: none !important;
+                }
+              }
+            }
+            text-align: center;
+            margin-right: 0 !important;
+          }
+        }
       }
     }
+  }
+}
+
+//tarifs page ================================================
+@media screen and (max-width: 1024px) {
+  .tarifs-block-wrap {
+    h1.title {
+      color: #333333;
+      text-align: center;
+      margin: 35px auto 0;
+      font-size: 60px;
+      line-height: 72px;
+      font-family: UbuntuBold;
+      font-weight: normal;
+      max-width: 800px;
+      margin-bottom: 50px;
+    }
+    .green-block {
+      background: #40ae49;
+      margin: 0 40px;
+    }
+    .plus-block {
+      justify-content: space-between;
+      .plus-item {
+        display: flex;
+        flex-direction: column;
+        .img-wrap {
+          padding-right: 20px;
+          img {
+
+          }
+        }
+        .text-wrap {
+          max-width: 100px;
+          padding-top: 0;
+          p {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+
+  .business-connect-item {
+    max-width: 980px;
+    margin: 50px auto 0;
+    .tarif-category-block {
+      margin: 0 40px;
+
+      .facts {
+        padding-right: 60px;
+        margin-bottom: 60px;
+        display: flex;
+
+        justify-content: space-between;
+        .tarif-fact {
+          display: flex;
+          margin-top: 50px;
+          .img-wrap {
+            margin-right: 30px;
+            margin-bottom: 10px;
+            .fact-img {
+
+            }
+          }
+          .text-wrap {
+            padding-top: 35px;
+            p {
+              color: #666666;
+              font-family: Ubuntu;
+              line-height: 24px;
+              max-width: 270px;
+            }
+          }
+        }
+      }
+      .wrap-row {
+        display: flex;
+        .wrap-blocks {
+          max-width: 640px;
+          .block-2 {
+            display: flex;
+            padding-bottom: 20px;
+            .block:first-child {
+              margin-right: 20px;
+            }
+            .hover-block {
+              min-width: 270px;
+              min-height: 300px;
+            }
+          }
+        }
+        .right-block-wrap {
+          margin-left: 0;
+          max-width: 270px;
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 950px) {
+  .tarifs-block-wrap {
+    .business-connect-item {
+      max-width: 980px;
+      margin: 50px auto 0;
+      .tarif-category-block {
+        margin: 0 40px;
+
+        .facts {
+          padding-right: 60px;
+          margin-bottom: 60px;
+          display: flex;
+
+          justify-content: space-between;
+          .tarif-fact {
+            display: flex;
+            margin-top: 50px;
+            .img-wrap {
+              margin-right: 30px;
+              margin-bottom: 10px;
+              .fact-img {
+
+              }
+            }
+            .text-wrap {
+              padding-top: 35px;
+              p {
+                color: #666666;
+                font-family: Ubuntu;
+                line-height: 24px;
+                max-width: 270px;
+              }
+            }
+          }
+        }
+        .wrap-row {
+          display: flex;
+          flex-direction: column;
+          .wrap-blocks {
+            max-width: 100%;
+            .block-2 {
+              display: flex;
+              padding-bottom: 20px;
+              .block {
+                width: 100%;
+                &:last-child {
+                  margin-left: 10px;
+                }
+                &:first-child {
+                  margin-right: 10px;
+                }
+              }
+              .hover-block {
+                min-width: 50%;
+                min-height: 300px;
+              }
+            }
+          }
+          .right-block-wrap {
+            margin-top: 45px;
+            margin-left: 0;
+            max-width: 270px;
+            margin-right: 0;
+          }
+        }
+      }
+    }
+
+  }
+}
+@media screen and (max-width: 950px) {
+
+  .tarifs-block-wrap {
+    .business-connect-item {
+      max-width: 980px;
+      margin: 50px auto 0;
+      .tarif-category-block {
+        margin: 0 40px;
+
+        .facts {
+          padding-right: 60px;
+          margin-bottom: 60px;
+          display: flex;
+
+          justify-content: space-between;
+          .tarif-fact {
+            flex-direction: column;
+            display: flex;
+            margin-top: 50px;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+
+@media screen and (max-width: 1000px) {
+  .about-company{
+    margin: 0 40px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .about-company{
+    margin: 0 40px;
+    .title{
+    }
+    .column-wrap{
+      display: flex;
+      .base-content-wrap{
+        width: 100%;
+        .img-wrap{
+          img{
+            max-width: 100%;
+          }
+        }
+      }
+    }
+
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .about-company{
+    margin: 0 40px;
+    .title{
+    }
+    .column-wrap{
+      display: flex;
+      flex-direction: column;
+      .base-content-wrap{
+        width: 100%;
+        .img-wrap{
+          img{
+            max-width: 100%;
+          }
+        }
+        .text-block{
+          p{
+          }
+        }
+        .big-link{
+        }
+      }
+      .right-block-wrap{
+        margin-top: 40px;
+        margin-left:0;
+        .right-block{
+          flex-direction: row;
+          display: flex;
+          .img-right-wrap{
+            img{
+
+            }
+          }
+          .right-text-block{
+            max-width: 100%;
+            padding-left: 30px;
+          }
+        }
+        .consult-block{
+          display: flex;
+          flex-direction: row;
+          .img-wrap{
+            padding-left: 50px;
+            img{
+
+            }
+          }
+
+          .text-block{
+            padding-top: 50px;
+            padding-left: 75px;
+            .link{
+            }
+          }
+        }
+      }
+    }
+
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .about-company{
+    margin: 0 40px;
+    .title{
+    }
+    .column-wrap{
+      display: flex;
+      flex-direction: column;
+      .base-content-wrap{
+        width: 100%;
+        .img-wrap{
+          img{
+            max-width: 100%;
+          }
+        }
+        .text-block{
+          p{
+          }
+        }
+        .big-link{
+        }
+      }
+      .right-block-wrap{
+        margin-top: 40px;
+        margin-left:0;
+        .right-block{
+          flex-direction: column;
+          display: flex;
+          .img-right-wrap{
+            img{
+
+            }
+          }
+          .right-text-block{
+            max-width: 100%;
+            padding-left: 30px;
+          }
+        }
+        .consult-block{
+          display: flex;
+          flex-direction: row;
+          .img-wrap{
+            padding-left: 20px;
+            img{
+
+            }
+          }
+
+          .text-block{
+            padding-top: 50px;
+            padding-left: 75px;
+            .link{
+            }
+          }
+        }
+      }
+    }
+
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .about-company{
+    margin: 0 20px;
+    .title{
+      font-size:40px;
+    }
+    .column-wrap{
+      display: flex;
+      flex-direction: column;
+      .base-content-wrap{
+        width: 100%;
+        .img-wrap{
+          img{
+            max-width: 100%;
+          }
+        }
+        .text-block{
+          p{
+          }
+        }
+        .big-link{
+        }
+      }
+      .right-block-wrap{
+        margin-top: 40px;
+        margin-left:0;
+        .right-block{
+          flex-direction: column;
+          display: flex;
+          .img-right-wrap{
+            img{
+
+            }
+          }
+          .right-text-block{
+            max-width: 100%;
+            padding-left: 0;
+          }
+        }
+        .consult-block{
+          display: flex;
+          flex-direction: column;
+          .img-wrap{
+            padding-left: 0;
+            img{
+
+            }
+          }
+
+          .text-block{
+            padding-top: 0;
+            padding-left: 0;
+            .link{
+            }
+          }
+        }
+      }
+    }
+
   }
 }
