--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -349,10 +349,11 @@ p.button-row {
     }
     h2.title {
       color: #ffffff;
-      font-size: 36px;
+      font-size: 32px;
       font-family: @UbuntuBold;
       font-weight: normal;
       padding-top: 38px;
+      padding-bottom: 20px;
     }
   }
 }
@@ -619,7 +620,7 @@ li.comment-item {
   }
   span.comment-speed {
     position: absolute;
-    background: url(../img/speed.PNG) no-repeat;
+    background: url(../img/speed.gif) no-repeat;
     font-size: 46px;
     color: #ffffff;
     padding-top: 5px;
