--- a/public/css/less/include/header.less
+++ b/public/css/less/include/header.less
@@ -76,14 +76,17 @@ header.page-head.index-page {
       left: -10px;
       .connect {
         position: absolute;
-        background: url(../img/modem-h.GIF) no-repeat 0px 0px;
+        background: url(../img/h-modem.PNG) no-repeat 0 0;
         height: 196px;
-        width: 210px;
+        left: -70px;
+        width: 320px;
         z-index: 2;
         .link {
           .link(@link-color, @link-border, @hover-color, @hover-border);
           margin-top: 38px;
           margin-left: 18px;
+          position: relative;
+          left: 80px;
           display: inline-block;
           vertical-align: top;
           font-size: 16px;
