--- a/public/css/less/mobile/1024.less
+++ b/public/css/less/mobile/1024.less
@@ -1,10 +1,20 @@
+
+
+@media screen and (min-width: 1600px) {
+  header.page-head.index-page {
+    nav.main-menu {
+      top: 142px;
+    }
+  }
+}
 @media screen and (max-width: 1000px) {
   header.page-head.index-page {
     margin-left: 0;
     width: 100%;
     .info-row {
-      padding: 30px 20px 60px;
+      padding: 30px 20px 60px 40px;
       .connect-item {
+        width: 210px;
         .connect {
           background: none;
         }
