--- a/public/css/less/include/footer.less
+++ b/public/css/less/include/footer.less
@@ -1,6 +1,6 @@
 footer.footer {
   background: #333333;
-  padding: 15px 0 0px;
+  padding: 15px 30px 0px;
   .wrap-1200.foot-flex {
     display: flex;
     max-width: 1000px;
