--- a/public/css/backup/style.css
+++ b/public/css/backup/style.css
@@ -139,7 +139,7 @@ body {
   left: 95px;
 }
 .tarifs {
-  padding-bottom: 80px;
+  padding-bottom: 78px;
 }
 .tarifs h2.title-gray {
   text-align: center;
@@ -330,8 +330,8 @@ p.button-row button.connect:hover {
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 35px;
 }
 .dont-speed-down .speed-block .col-1-2:first-child {
   padding-left: 20px;
@@ -373,7 +373,7 @@ p.button-row button.connect:hover {
   color: #ffffff;
   font-size: 60px;
   text-align: center;
-  padding-top: 80px;
+  padding-top: 10px;
   font-family: UbuntuBold;
 }
 .individual-tarif .wrap-1200 p.sub-title {
@@ -394,7 +394,7 @@ p.button-row button.connect:hover {
   border-radius: 20px;
   position: relative;
   z-index: 5;
-  background: url(../img/ind-back.PNG) no-repeat 10px 15px, #ffffff;
+  background: url(../img/ind-back.PNG) no-repeat 30px 0px, #ffffff;
 }
 .individual-tarif .wrap-1200 .application h3.title {
   font-family: UbuntuBold;
@@ -476,13 +476,24 @@ p.button-row button.connect:hover {
   border-radius: 30px;
   border: none;
   background: #379d47;
-  margin-top: 12px;
+  margin-top: 8px;
   position: relative;
   z-index: 5;
 }
 .individual-tarif .wrap-1200 .application .row.button .send-form:hover {
   cursor: pointer;
   background: #109d2c;
+}
+.individual-tarif:after {
+  content: '';
+  display: block;
+  clear: both;
+  width: 100%;
+  background: url(../img/circle-bot.PNG) no-repeat center;
+  height: 165px;
+  position: relative;
+  top: -140px;
+  z-index: 1;
 }
 ul.icons-list {
   position: relative;
@@ -508,8 +519,8 @@ ul.icons-list li.icon.play-ic {
 }
 .cc {
   position: absolute;
-  left: -5px;
-  top: 30px;
+  left: 6px;
+  top: 26px;
   z-index: 1;
 }
 .cc .connector {
@@ -523,35 +534,25 @@ ul.icons-list li.icon.play-ic {
   content: "";
   background: url(../img/connector-cable.PNG) repeat-x left top;
   display: inline-block;
-  width: 22px;
+  width: 2px;
   height: 18px;
   transition: 1s all;
 }
 .comments-block {
-  background: #379d47;
   padding-bottom: 120px;
-  padding-top: 180px;
 }
 .comments-block .title {
-  padding-top: 80px;
-  padding-bottom: 20px;
+  padding-top: 265px;
   text-align: center;
   font-family: UbuntuBold;
   color: #333333;
   font-size: 60px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background: #ffffff;
 }
 .comments-block .grid-comment {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  background: #ffffff;
-  padding-bottom: 60px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 li.comment-item {
   max-width: 320px;
@@ -611,7 +612,7 @@ li.comment-item .comment p {
 }
 li.comment-item span.comment-speed {
   position: absolute;
-  background: url(../img/speed.png) no-repeat;
+  background: url(../img/speed.gif) no-repeat;
   font-size: 46px;
   color: #ffffff;
   padding-top: 5px;
@@ -1699,17 +1700,18 @@ header.page-head.index-page {
   -ms-flex-direction: column;
       flex-direction: column;
   margin-left: 61px;
-  padding-bottom: 0;
-  box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
+  position: relative;
+  padding-bottom: 120px;
   background: transparent;
 }
 header.page-head.index-page .info-row {
   display: -ms-flexbox;
   display: flex;
-  padding: 40px 90px 40px 60px;
+  padding: 30px 90px 50px 60px;
   -ms-flex-pack: justify;
       justify-content: space-between;
   background: #ffffff;
+  box-shadow: 0 1px 55px 25px rgba(0, 86, 0, 0.8);
   z-index: 0;
 }
 header.page-head.index-page .info-row .inf-block {
@@ -1721,9 +1723,9 @@ header.page-head.index-page .info-row .inf-block {
 header.page-head.index-page .info-row .inf-block .phone {
   position: relative;
   font-family: Ubuntu;
-  font-size: 16px;
-  padding-top: 13px;
-  margin-right: 45px;
+  font-size: 20px;
+  padding-top: 10px;
+  margin-right: 25px;
   color: #333333;
 }
 header.page-head.index-page .info-row .inf-block .phone p:before {
@@ -1746,8 +1748,7 @@ header.page-head.index-page .info-row .inf-block .consult label .icon {
 }
 header.page-head.index-page .info-row .inf-block .consult label .link {
   position: relative;
-  font-family: Ubuntu;
-  top: -4px;
+  top: -3px;
   background: linear-gradient(to left, #c3e4ca, #c3e4ca 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
@@ -1781,9 +1782,9 @@ header.page-head.index-page .info-row .connect-item {
 }
 header.page-head.index-page .info-row .connect-item .connect {
   position: absolute;
-  background: url(../img/h-modem.PNG) no-repeat 0px 7px;
+  background: url(../img/h-modem.PNG) no-repeat 0 0;
   height: 196px;
-  left: -35px;
+  left: -70px;
   width: 320px;
   z-index: 2;
 }
@@ -1797,12 +1798,11 @@ header.page-head.index-page .info-row .connect-item .connect .link {
   margin-top: 38px;
   margin-left: 18px;
   position: relative;
-  left: 35px;
-  top: -1px;
+  left: 80px;
   display: inline-block;
   vertical-align: top;
   font-size: 16px;
-  font-family: UbuntuBold;
+  font-family: Ubuntu;
 }
 header.page-head.index-page .info-row .connect-item .connect .link:hover {
   cursor: pointer;
@@ -1826,13 +1826,10 @@ header.page-head.index-page nav.main-menu {
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  width: 1139px;
-  position: static;
-  box-shadow: 0 15px 35px 15px rgba(0, 86, 0, 0.25);
-  background: #ffffff;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  padding-bottom: 60px;
+  position: absolute;
+  width: 1200px;
+  background: url(../img/header_bot.PNG) no-repeat 0px 0px;
+  padding-bottom: 155px;
   left: -29px;
 }
 header.page-head.index-page nav.main-menu ul.menu {
@@ -1853,7 +1850,7 @@ header.page-head.index-page nav.main-menu ul.menu li.menu-item.active .menu-link
 header.page-head.index-page nav.main-menu ul.menu li.menu-item .menu-link {
   font-family: UbuntuBold;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 18px;
   background: linear-gradient(to left, #c3e4ca, #c3e4ca 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
   background-position: 0 100%;
