--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -129,7 +129,7 @@ body{
 }
 
 .tarifs {
-  padding-bottom: 78px;
+  padding-bottom: 80px;
   h2.title-gray {
     text-align: center;
     font-size: 60px;
@@ -326,8 +326,8 @@ p.button-row {
   .speed-block {
     display: flex;
     justify-content: center;
-    padding-top: 60px;
-    padding-bottom: 35px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     .col-1-2 {
       &:first-child {
         padding-left: 20px;
@@ -374,7 +374,7 @@ p.button-row {
       color: #ffffff;
       font-size: 60px;
       text-align: center;
-      padding-top: 10px;
+      padding-top: 80px;
       font-family: @UbuntuBold;
     }
     p.sub-title {
@@ -395,7 +395,7 @@ p.button-row {
       border-radius: 20px;
       position: relative;
       z-index: 5;
-      background: url(../img/ind-back.PNG) no-repeat 30px 0px, #ffffff;
+      background: url(../img/ind-back.PNG) no-repeat 10px 15px, #ffffff;
       h3.title {
         font-family: @UbuntuBold;
         font-size: 36px;
@@ -474,7 +474,7 @@ p.button-row {
             border-radius: 30px;
             border: none;
             background: @dark-green;
-            margin-top: 8px;
+            margin-top: 12px;
             position: relative;
             z-index: 5;
             &:hover {
@@ -487,17 +487,7 @@ p.button-row {
     }
 
   }
-  &:after {
-    content: '';
-    display: block;
-    clear: both;
-    width: 100%;
-    background: url(../img/circle-bot.PNG) no-repeat center;
-    height: 165px;
-    position: relative;
-    top: -140px;
-    z-index: 1;
-  }
+
 }
 
 ul.icons-list {
@@ -526,8 +516,8 @@ ul.icons-list {
 
 .cc {
   position: absolute;
-  left: 6px;
-  top: 26px;
+  left: -5px;
+  top: 30px;
   z-index: 1;
   .connector {
     background: url(../img/connector.PNG) no-repeat left top;
@@ -540,25 +530,35 @@ ul.icons-list {
     content: "";
     background: url(../img/connector-cable.PNG) repeat-x left top;
     display: inline-block;
-    width: 2px;
+    width: 22px;
     height: 18px;
     transition: 1s all;
   }
 }
 
 .comments-block {
+  background: @dark-green;
   padding-bottom: 120px;
+  padding-top: 180px;
   .title {
-    padding-top: 265px;
+    padding-top: 80px;
+    padding-bottom: 20px;
     text-align: center;
     font-family: @UbuntuBold;
     color: #333333;
     font-size: 60px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background: #ffffff;
   }
 
   .grid-comment {
     display: flex;
     justify-content: center;
+    background: #ffffff;
+    padding-bottom: 60px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 
   }
 }
@@ -620,7 +620,7 @@ li.comment-item {
   }
   span.comment-speed {
     position: absolute;
-    background: url(../img/speed.gif) no-repeat;
+    background: url(../img/speed.png) no-repeat;
     font-size: 46px;
     color: #ffffff;
     padding-top: 5px;
@@ -632,6 +632,8 @@ li.comment-item {
     right: -65px;
     i.small {
       font-size: 14px;
+      position: relative;
+      top: -5px;
       display: block;
       font-style: normal;
     }
