--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -620,7 +620,7 @@ li.comment-item {
   }
   span.comment-speed {
     position: absolute;
-    background: url(../img/speed.png) no-repeat;
+    background: url(../img/speed.PNG) no-repeat;
     font-size: 46px;
     color: #ffffff;
     padding-top: 5px;
