--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -45,7 +45,7 @@ body{
     text-align: center;
     max-width: 745px;
     margin: 0 auto;
-    padding-top: 58px;
+    padding-top: 60px;
     line-height: 73px;
     text-shadow: 0px 20px 25px rgba(0, 102, 0, 0.8);
   }
@@ -82,6 +82,7 @@ body{
         font-family: @Ubuntu;
         position: relative;
         max-width: 160px;
+        line-height: 30px;
         top: -10px;
         left: 105px;
       }
@@ -134,12 +135,12 @@ body{
     text-align: center;
     font-size: 60px;
     font-family: @UbuntuBold;
-    padding-top: 40px;
+    padding-top: 60px;
     color: #333333;
   }
   p.sub-title-gray {
     text-align: center;
-    font-size: 24px;
+    font-size: 16px;
     font-family: @Ubuntu;
     padding-top: 20px;
     color: #999999;
@@ -374,7 +375,7 @@ p.button-row {
       color: #ffffff;
       font-size: 60px;
       text-align: center;
-      padding-top: 80px;
+      padding-top: 60px;
       font-family: @UbuntuBold;
     }
     p.sub-title {
@@ -384,7 +385,7 @@ p.button-row {
       max-width: 590px;
       text-align: center;
       margin: 0 auto;
-      padding-top: 30px;
+      padding-top: 20px;
       line-height: 30px;
     }
     .application {
@@ -460,7 +461,8 @@ p.button-row {
           color: @link-color;
           top: 40px;
           &:hover{
-            color:#21cc47;
+            color:#006939 ;
+
             cursor: pointer;
           }
         }
@@ -541,7 +543,7 @@ ul.icons-list {
   padding-bottom: 120px;
   padding-top: 180px;
   .title {
-    padding-top: 80px;
+    padding-top: 60px;
     padding-bottom: 20px;
     text-align: center;
     font-family: @UbuntuBold;
